Audio and video file writing now supported. Currently, the FPS is a guess and will eventually need to be calculated by the system.

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,16 @@ active_camera_ids = [0, 1]
 active_microphone_ids = [1, 2]
 
 [AUDIO_VIDEO]
+# Pairing camera and microphone IDs. [ (audio, video), (audio, video)]
 microphone_camera_mapping = [(0, 2), (1, 1)]
 
 [OUTPUT_AUDIO]
 audio_stream_device_id = 4
+audio_file = True
+audio_filename = "output_audio.wav"
+
+[OUTPUT_VIDEO]
+video_stream = True
+video_file = True
+video_filename = "output_video.avi"
+
