Added streaming capability for audio and video through independent processes. This will allow independent update rates and not bog down the system with I/O calls.

--- a/config.ini
+++ b/config.ini
@@ -6,15 +6,15 @@ active_microphone_ids = [1, 2]
 
 [AUDIO_VIDEO]
 # Pairing camera and microphone IDs. [ (audio, video), (audio, video)]
-microphone_camera_mapping = [(0, 2), (1, 1)]
+microphone_camera_mapping = [(1, 1), (2, 0)]
 
 [OUTPUT_AUDIO]
+audio_file = False
 audio_stream_device_id = 4
-audio_file = True
 audio_filename = "output_audio.wav"
 
 [OUTPUT_VIDEO]
 video_stream = True
-video_file = True
+video_file = False
 video_filename = "output_video.avi"
 
