--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [VIDEO]
-active_camera_ids = [0, 1]
+active_camera_ids = [0, 1, 2]
 
 [AUDIO]
 active_microphone_ids = [1, 2]
@@ -9,12 +9,13 @@ active_microphone_ids = [1, 2]
 microphone_camera_mapping = [(1, 1), (2, 0)]
 
 [OUTPUT_AUDIO]
-audio_file = False
-audio_stream_device_id = 4
+audio_file = True
+audio_input_device_id = 2
+audio_output_device_id = 4
 audio_filename = "output_audio.wav"
 
 [OUTPUT_VIDEO]
 video_stream = True
-video_file = False
+video_file = True
 video_filename = "output_video.avi"
 
