--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [MODE]
-live_mode = False
+live_mode = True
 
 [VIDEO]
 active_camera_ids = [0, 1]
@@ -15,12 +15,12 @@ main_audio_file = 'test_files/IS1000a.Array2-01.wav'
 microphone_camera_mapping = [(1, 1)]
 
 [OUTPUT_AUDIO]
-audio_file = True
+audio_file = False
 audio_input_device_id = 1
 audio_output_device_id = 3
 audio_filename = "output_audio.wav"
 
 [OUTPUT_VIDEO]
-video_file = True
+video_file = False
 video_filename = "output_video.avi"
 
