Beginning overhaul of source and feature managers for better clarity and integration with voting system.

--- a/config.ini
+++ b/config.ini
@@ -18,9 +18,9 @@ microphone_camera_mapping = [(1, 1)]
 audio_file = True
 audio_input_device_id = 1
 audio_output_device_id = 3
-audio_filename = "output_audio.wav"
+audio_filename = "output/output_audio.wav"
 
 [OUTPUT_VIDEO]
 video_file = True
-video_filename = "output_video.avi"
+video_filename = "output/output_video.avi"
 
