--- a/config.ini
+++ b/config.ini
@@ -6,21 +6,21 @@ active_camera_ids = [0, 1]
 video_filenames = ['test_files/IS1000a.Closeup1.avi', 'test_files/IS1000a.Closeup2.avi', 'test_files/IS1000a.Closeup3.avi', 'test_files/IS1000a.Closeup4.avi']
 
 [AUDIO]
-active_microphone_ids = [1, 2]
+active_microphone_ids = [2, 1]
 audio_filenames = ['test_files/IS1000a.Headset-0.wav', 'test_files/IS1000a.Headset-1.wav', 'test_files/IS1000a.Headset-2.wav', 'test_files/IS1000a.Headset-3.wav']
 main_audio_file = 'test_files/IS1000a.Array2-01.wav'
 
 [AUDIO_VIDEO]
 # Pairing camera and microphone IDs. [ (audio, video), (audio, video)]
-microphone_camera_mapping = [(2, 0), (1, 1)]
+microphone_camera_mapping = [(1, 1)]
 
 [OUTPUT_AUDIO]
 audio_file = True
 audio_input_device_id = 1
-audio_output_device_id = 3
-audio_filename = "output/output_audio.wav"
+audio_output_device_id = 4
+audio_filename = "output_files/output_audio.wav"
 
 [OUTPUT_VIDEO]
 video_file = True
-video_filename = "output/output_video.avi"
+video_filename = "output_files/output_video.avi"
 
