--- a/config.ini
+++ b/config.ini
@@ -1,22 +1,19 @@
 [MODE]
-live_mode = True
+live_mode = False
 
-[VIDEO]
+[LIVE]
 active_camera_ids = [0, 1]
-video_filenames = ['test_files/IS1000a.Closeup1.avi', 'test_files/IS1000a.Closeup2.avi', 'test_files/IS1000a.Closeup3.avi', 'test_files/IS1000a.Closeup4.avi']
+active_microphone_ids = [1, 2]
+microphone_camera_mapping = [(1, 1), (2, 0)]  # Pairing camera and microphone IDs. [ (audio, video), (audio, video)]
+audio_input_device_id = 2
 
-[AUDIO]
-active_microphone_ids = [2, 1]
+[FILES]
+video_filenames = ['test_files/IS1000a.Closeup1.avi', 'test_files/IS1000a.Closeup2.avi', 'test_files/IS1000a.Closeup3.avi', 'test_files/IS1000a.Closeup4.avi']
 audio_filenames = ['test_files/IS1000a.Headset-0.wav', 'test_files/IS1000a.Headset-1.wav', 'test_files/IS1000a.Headset-2.wav', 'test_files/IS1000a.Headset-3.wav']
 main_audio_file = 'test_files/IS1000a.Array2-01.wav'
 
-[AUDIO_VIDEO]
-# Pairing camera and microphone IDs. [ (audio, video), (audio, video)]
-microphone_camera_mapping = [(1, 1)]
-
 [OUTPUT_AUDIO]
 audio_file = True
-audio_input_device_id = 2
 audio_output_device_id = 4
 audio_filename = "output_files/output_audio.wav"
 
